Fix extra space and update hugo to 0.99.00

--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -228,12 +228,17 @@
 }
 
 
+
 /* markdown style */
 .content {
   * {
     margin-bottom: 20px;
   }
 
+  /* Fix extra space in code snippet */
+  code span{
+    margin-bottom: 0px;
+  }
   h1,
   h2,
   h3,
